--- a/Technopark_project/QA_project/templates/QA_project/settings.html
+++ b/Technopark_project/QA_project/templates/QA_project/settings.html
@@ -4,7 +4,7 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-8">
-                <h1>Settings: Dr. Pepper</h1>
+                <h1>Settings</h1>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
